--- a/.github/workflows/npm-audit-workflow.yml
+++ b/.github/workflows/npm-audit-workflow.yml
@@ -15,8 +15,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Use the custom npm-audit-action
-      - name: Run npm Audit Action
-        uses: ./
+      # Set up Node.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: '16'
+
+      # Install dependencies for the custom action
+      - name: Install dependencies
+        run: npm install
+
+      # Run the custom action
+      - name: Run npm Audit Action
+        uses: ./
